--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  soundpool: ^0.5.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
